# vans_copter

./: CMakeLists.txt  compile_commands.json  package.xml
include/vans_copter/: DualFilter.h  customPID.h
msg/: CamCtrl.msg  CamParam.msg  Command.msg  PlanningPoint.msg  RPY.msg  VecForward.msg  XYZ.msg  rpm.msg
script/: filetest.py  imgDetection.py  imgSaver.py  talker.py
simulationComponents/: vansCopter.launch  worldRemix.world
simulationComponents/Gazeboscene2/: model.config  model.sdf
simulationComponents/Gazeboscene2/mesh_texture/: GazeboScene2.dae
simulationComponents/copterRemix/: model.config  model.sdf
simulationComponents/copterRemix/mesh_texture/: camHoldPitch.dae  camHoldRoll.dae  camHoldYaw.dae  camera.dae
simulationComponents/copterRemix2detect/: model.config  model.sdf
simulationComponents/copterRemix2detect/mesh_texture/: propA.dae  propB.dae  scope.dae
simulationComponents/scene/: model.sdf
src/lib/: DualFilter.cpp  customPID.cpp
src/main/: BBoxInfo.cpp  Com2.cpp  KeycmdProcess.cpp  MyCtrl.cpp  PosSaver.cpp  RPY_Cam.cpp  RPY_test.cpp  TargetCtrl.cpp  XYZ_test.cpp  camStablizer.cpp  cv_ros_beginner.cpp  motor_plgn.cpp  planningPoint.cpp
